crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__cycle__query_partitions_cycle-solved.snap
---
source: crates/engine/query-solver/src/tests/cycle.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"PartitionsCycle.third\", color=forestgreen ]\n    2 [ label = \"PartitionsCycle.first\", color=forestgreen ]\n    3 [ label = \"PartitionsCycle.second\", color=forestgreen ]\n    4 [ label = \"Root#C\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    5 [ label = \"partitionsCycle#C\", shape=box, color=dodgerblue, color=forestgreen ]\n    6 [ label = \"FedEntity#A\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    7 [ label = \"third#A\", shape=box, color=dodgerblue, color=forestgreen ]\n    8 [ label = \"first#A\", shape=box, color=dodgerblue, color=forestgreen ]\n    9 [ label = \"FedEntity#B\", shape=parallelogram, color=dodgerblue, color=forestgreen ]\n    10 [ label = \"second#B\", shape=box, color=dodgerblue, color=forestgreen ]\n    11 [ label = \"*PartitionsCycle.id\", color=forestgreen ]\n    12 [ label = \"id#C\", shape=box, color=dodgerblue, color=forestgreen ]\n    0 -> 4 [ label = <<b>1</b>>, color=forestgreen,fontcolor=forestgreen ]\n    4 -> 5 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 6 [ label = <<b>1</b>>, color=forestgreen,fontcolor=forestgreen ]\n    6 -> 7 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    7 -> 1 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    6 -> 8 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    8 -> 2 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 9 [ label = <<b>1</b>>, color=forestgreen,fontcolor=forestgreen ]\n    9 -> 10 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    10 -> 3 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    5 -> 12 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n    12 -> 11 [ label = \"\", color=forestgreen,fontcolor=forestgreen ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "PartitionsCycle.third", steiner=1 ]
    2 [ label = "PartitionsCycle.first", steiner=1 ]
    3 [ label = "PartitionsCycle.second", steiner=1 ]
    4 [ label = "Root#C", steiner=1 ]
    5 [ label = "partitionsCycle#C", steiner=1 ]
    6 [ label = "FedEntity#A", steiner=1 ]
    7 [ label = "third#A", steiner=1 ]
    8 [ label = "first#A", steiner=1 ]
    9 [ label = "FedEntity#B", steiner=1 ]
    10 [ label = "second#B", steiner=1 ]
    11 [ label = "*PartitionsCycle.id", steiner=1 ]
    12 [ label = "id#C", steiner=1 ]
    0 -> 4 [ cost=1, steiner=1]
    4 -> 5 [ cost=0, steiner=1]
    5 -> 6 [ cost=1, steiner=1]
    6 -> 7 [ cost=0, steiner=1]
    7 -> 1 [ cost=0, steiner=1]
    6 -> 8 [ cost=0, steiner=1]
    8 -> 2 [ cost=0, steiner=1]
    5 -> 9 [ cost=1, steiner=1]
    9 -> 10 [ cost=0, steiner=1]
    10 -> 3 [ cost=0, steiner=1]
    5 -> 12 [ cost=0, steiner=1]
    12 -> 11 [ cost=0, steiner=1]
}
