crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__cycle__query_partitions_nested_cycle-partial-solution.snap
---
source: crates/engine/query-solver/src/tests/cycle.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#C\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.feed\" ]\n    3 [ label = \"FedEntity#A\", color=royalblue,shape=parallelogram ]\n    4 [ label = \"Post.author\" ]\n    5 [ label = \"Author.id\" ]\n    6 [ label = \"Post.comments\" ]\n    7 [ label = \"Comment.id\" ]\n    8 [ label = \"FedEntity#C\", color=royalblue,shape=parallelogram ]\n    9 [ label = \"*Comment.authorId\" ]\n    10 [ label = \"*Post.id\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    3 -> 4 [ label = \"\" ]\n    4 -> 5 [ label = \"\" ]\n    3 -> 6 [ label = \"\" ]\n    6 -> 7 [ label = \"\" ]\n    6 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 9 [ label = \"\" ]\n    2 -> 10 [ label = \"\" ]\n    3 -> 10 [ label = \"\", color=orangered,arrowhead=inv ]\n    4 -> 9 [ label = \"\", color=orangered,arrowhead=inv ]\n    4 -> 6 [ label = \"\", color=orangered,arrowhead=inv ]\n    8 -> 7 [ label = \"\", color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#C" ]
    2 [ label = "Query.feed" ]
    3 [ label = "FedEntity#A" ]
    4 [ label = "Post.author" ]
    5 [ label = "Author.id" ]
    6 [ label = "Post.comments" ]
    7 [ label = "Comment.id" ]
    8 [ label = "FedEntity#C" ]
    9 [ label = "*Comment.authorId" ]
    10 [ label = "*Post.id" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "QueryPartition" ]
    3 -> 4 [ label = "Field" ]
    4 -> 5 [ label = "Field" ]
    3 -> 6 [ label = "Field" ]
    6 -> 7 [ label = "Field" ]
    6 -> 8 [ label = "QueryPartition" ]
    8 -> 9 [ label = "Field" ]
    2 -> 10 [ label = "Field" ]
    3 -> 10 [ label = "RequiredBySubgraph" ]
    4 -> 9 [ label = "RequiredBySubgraph" ]
    4 -> 6 [ label = "RequiredBySubgraph" ]
    8 -> 7 [ label = "RequiredBySubgraph" ]
}
