crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__cycle__query_partitions_nested_cycle2-partial-solution.snap
---
source: crates/engine/query-solver/src/tests/cycle.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#C\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.feed\" ]\n    3 [ label = \"FedEntity#A\", color=royalblue,shape=parallelogram ]\n    4 [ label = \"Post.author\" ]\n    5 [ label = \"Author.id\" ]\n    6 [ label = \"Post.comments\" ]\n    7 [ label = \"FedEntity#C\", color=royalblue,shape=parallelogram ]\n    8 [ label = \"*Comment.authorId\" ]\n    9 [ label = \"Comment.id\" ]\n    10 [ label = \"*Post.id\" ]\n    0 -> 1 [ color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [  ]\n    2 -> 3 [ color=royalblue,fontcolor=royalblue ]\n    3 -> 4 [  ]\n    4 -> 5 [  ]\n    3 -> 6 [  ]\n    6 -> 7 [ color=royalblue,fontcolor=royalblue ]\n    7 -> 8 [  ]\n    6 -> 9 [  ]\n    2 -> 10 [  ]\n    3 -> 10 [ color=orangered,arrowhead=inv ]\n    4 -> 8 [ color=orangered,arrowhead=inv ]\n    4 -> 6 [ color=orangered,arrowhead=inv ]\n    7 -> 9 [ color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#C" ]
    2 [ label = "Query.feed" ]
    3 [ label = "FedEntity#A" ]
    4 [ label = "Post.author" ]
    5 [ label = "Author.id" ]
    6 [ label = "Post.comments" ]
    7 [ label = "FedEntity#C" ]
    8 [ label = "*Comment.authorId" ]
    9 [ label = "Comment.id" ]
    10 [ label = "*Post.id" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "QueryPartition" ]
    3 -> 4 [ label = "Field" ]
    4 -> 5 [ label = "Field" ]
    3 -> 6 [ label = "Field" ]
    6 -> 7 [ label = "QueryPartition" ]
    7 -> 8 [ label = "Field" ]
    6 -> 9 [ label = "Field" ]
    2 -> 10 [ label = "Field" ]
    3 -> 10 [ label = "RequiredBySubgraph" ]
    4 -> 8 [ label = "RequiredBySubgraph" ]
    4 -> 6 [ label = "RequiredBySubgraph" ]
    7 -> 9 [ label = "RequiredBySubgraph" ]
}
