crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__cycle__query_partitions_nested_cycle2-solver.snap
---
source: crates/engine/query-solver/src/tests/cycle.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Author.id\", style=dashed ]\n    2 [ label = \"Comment.id\", style=dashed ]\n    3 [ label = \"Root#C\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    4 [ label = \"feed#C\", shape=box, color=dodgerblue, style=dashed ]\n    5 [ label = \"FedEntity#A\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    6 [ label = \"comments#A\", shape=box, color=dodgerblue, style=dashed ]\n    7 [ label = \"id#A\", shape=box, color=dodgerblue, style=dashed ]\n    8 [ label = \"author#A\", shape=box, color=dodgerblue, style=dashed ]\n    9 [ label = \"id#A\", shape=box, color=dodgerblue, style=dashed ]\n    10 [ label = \"*Comment.authorId\", style=dashed ]\n    11 [ label = \"FedEntity#C\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    12 [ label = \"authorId#C\", shape=box, color=dodgerblue, style=dashed ]\n    13 [ label = \"*Post.id\", style=dashed ]\n    14 [ label = \"id#C\", shape=box, color=dodgerblue, style=dashed ]\n    15 [ label=\"\", style=dashed]\n    0 -> 3 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 5 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 8 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 11 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Author.id", steiner=0 ]
    2 [ label = "Comment.id", steiner=0 ]
    3 [ label = "Root#C", steiner=0 ]
    4 [ label = "feed#C", steiner=0 ]
    5 [ label = "FedEntity#A", steiner=0 ]
    6 [ label = "comments#A", steiner=0 ]
    7 [ label = "id#A", steiner=0 ]
    8 [ label = "author#A", steiner=0 ]
    9 [ label = "id#A", steiner=0 ]
    10 [ label = "*Comment.authorId", steiner=0 ]
    11 [ label = "FedEntity#C", steiner=0 ]
    12 [ label = "authorId#C", steiner=0 ]
    13 [ label = "*Post.id", steiner=0 ]
    14 [ label = "id#C", steiner=0 ]
    15 [ label="", style=dashed]
    0 -> 3 [ cost=1, steiner=0]
    3 -> 4 [ cost=0, steiner=0]
    4 -> 5 [ cost=1, steiner=0]
    5 -> 6 [ cost=0, steiner=0]
    6 -> 7 [ cost=0, steiner=0]
    7 -> 2 [ cost=0, steiner=0]
    5 -> 8 [ cost=1, steiner=0]
    8 -> 9 [ cost=0, steiner=0]
    9 -> 1 [ cost=0, steiner=0]
    6 -> 11 [ cost=1, steiner=0]
    11 -> 12 [ cost=0, steiner=0]
    12 -> 10 [ cost=0, steiner=0]
    4 -> 14 [ cost=0, steiner=0]
    14 -> 13 [ cost=0, steiner=0]
    15 -> 0 [ cost=0, steiner=0]
}
