crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__cycle__requirements_cycle-graph.snap
---
source: crates/engine/query-solver/src/tests/cycle.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Query.requirementsCycle\" ]\n    2 [ label = \"RequirementsCycle.bootstrap\" ]\n    3 [ label = \"Root#C\", shape=parallelogram, color=dodgerblue ]\n    4 [ label = \"requirementsCycle#C\", shape=box, color=dodgerblue ]\n    5 [ label = \"FedEntity#B\", shape=parallelogram, color=dodgerblue ]\n    6 [ label = \"bootstrap#B\", shape=box, color=dodgerblue ]\n    7 [ label = \"*RequirementsCycle.first\" ]\n    8 [ label = \"FedEntity#A\", shape=parallelogram, color=dodgerblue ]\n    9 [ label = \"first#A\", shape=box, color=dodgerblue ]\n    10 [ label = \"*RequirementsCycle.second\" ]\n    11 [ label = \"second#B\", shape=box, color=dodgerblue ]\n    12 [ label = \"*RequirementsCycle.id\" ]\n    13 [ label = \"id#C\", shape=box, color=dodgerblue ]\n    0 -> 1 [ label = \"\" ]\n    1 -> 2 [ label = \"\" ]\n    0 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 3 [ label = \"\", style=dashed,arrowhead=none ]\n    3 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    4 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 5 [ label = \"\", style=dashed,arrowhead=none ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    6 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    1 -> 7 [ label = \"\" ]\n    6 -> 7 [ label = \"\", color=orangered,arrowhead=inv ]\n    4 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 8 [ label = \"\", style=dashed,arrowhead=none ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 7 [ label = \"\", color=violet,arrowhead=none ]\n    1 -> 10 [ label = \"\" ]\n    9 -> 10 [ label = \"\", color=orangered,arrowhead=inv ]\n    5 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 10 [ label = \"\", color=violet,arrowhead=none ]\n    11 -> 7 [ label = \"\", color=orangered,arrowhead=inv ]\n    1 -> 12 [ label = \"\" ]\n    8 -> 12 [ label = \"\", color=orangered,arrowhead=inv ]\n    4 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    13 -> 12 [ label = \"\", color=violet,arrowhead=none ]\n    5 -> 12 [ label = \"\", color=orangered,arrowhead=inv ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Query.requirementsCycle]
    2 [ RequirementsCycle.bootstrap]
    3 [ Root#C]
    4 [ requirementsCycle#C]
    5 [ FedEntity#B]
    6 [ bootstrap#B]
    7 [ *RequirementsCycle.first]
    8 [ FedEntity#A]
    9 [ first#A]
    10 [ *RequirementsCycle.second]
    11 [ second#B]
    12 [ *RequirementsCycle.id]
    13 [ id#C]
    0 -> 1 [ label = "Field" ]
    1 -> 2 [ label = "Field" ]
    0 -> 3 [ label = "CreateChildResolver" ]
    0 -> 3 [ label = "HasChildResolver" ]
    3 -> 4 [ label = "CanProvide" ]
    4 -> 1 [ label = "Provides" ]
    4 -> 5 [ label = "CreateChildResolver" ]
    1 -> 5 [ label = "HasChildResolver" ]
    5 -> 6 [ label = "CanProvide" ]
    6 -> 2 [ label = "Provides" ]
    1 -> 7 [ label = "Field" ]
    6 -> 7 [ label = "RequiredBySubgraph" ]
    4 -> 8 [ label = "CreateChildResolver" ]
    1 -> 8 [ label = "HasChildResolver" ]
    8 -> 9 [ label = "CanProvide" ]
    9 -> 7 [ label = "Provides" ]
    1 -> 10 [ label = "Field" ]
    9 -> 10 [ label = "RequiredBySubgraph" ]
    5 -> 11 [ label = "CanProvide" ]
    11 -> 10 [ label = "Provides" ]
    11 -> 7 [ label = "RequiredBySubgraph" ]
    1 -> 12 [ label = "Field" ]
    8 -> 12 [ label = "RequiredBySubgraph" ]
    4 -> 13 [ label = "CanProvide" ]
    13 -> 12 [ label = "Provides" ]
    5 -> 12 [ label = "RequiredBySubgraph" ]
}
